--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ng2-validation": "^3.3.0",
     "ngx-modialog": "^5.0.0",
     "ngx-quill": "^2.1.1",
+    "ngx-uploader": "^4.2.2",
     "node-sass": "4.7.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.6",
