Fixed add Card, Item

--- a/package.json
+++ b/package.json
@@ -23,21 +23,23 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angularclass/hmr": "^2.1.3",
+    "@types/file-saver": "^1.3.0",
     "angular2-materialize": "^6.6.0",
     "angular2-modal": "^2.0.2",
+    "angular4-drag-drop": "^1.1.2",
     "angularfire2": "^5.0.0-rc.6.0-next",
     "clarity-angular": "0.10.25",
     "clarity-icons": "^0.8.7",
     "clarity-ui": "^0.8.7",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
+    "file-saver": "^1.3.3",
     "firebase": "^4.9.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.97.8",
     "mutationobserver-shim": "^0.3.2",
     "mydatepicker": "^1.7.4",
-    "ng2-dragula": "^1.3.0",
     "ng2-uploader": "^2.0.0",
     "ng2-validation": "^3.3.0",
     "ngx-modialog": "^5.0.0",
