--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angularclass/hmr": "^2.1.3",
+    "@ngrx/store": "^5.2.0",
     "@types/file-saver": "^1.3.0",
     "angular2-materialize": "^6.6.0",
     "angular2-modal": "^2.0.2",
