--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ng2-uploader": "^2.0.0",
     "ng2-validation": "^3.3.0",
     "ngx-modialog": "^5.0.0",
+    "ngx-password-toggle": "^1.0.3",
     "ngx-quill": "^2.1.1",
     "ngx-uploader": "^4.2.2",
     "node-sass": "4.7.2",
